testdata/language-features/basic-values/if03.reject.out
type error: can not unify
  <<installed-prelude-path>>/Internals.lc:63:6:
  data Bool = False | True
       ^^^^
with
  ()
in ./testdata/language-features/basic-values/if03.reject.lc:1:13:
value1 = if () then () else ()
            ^^
------------ trace
!type error: can not unify
  <<installed-prelude-path>>/Internals.lc:63:6:
  data Bool = False | True
       ^^^^
with
  ()
in ./testdata/language-features/basic-values/if03.reject.lc:1:13:
value1 = if () then () else ()
            ^^
------------ tooltips
1:13-1:15
    ()